2005-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GetImageAttribute): Add more general support
	for retrieving wildcarded attributes so that an identify -format
	specification like '%[dpx:*]' works as expected.
	* coders/tiff.c (WriteTIFFImage): Transform quality value into zip
	compression quality level similar to what is done for MIFF/MNG/PNG.
	Since default quality value is 75, this means that the default zip
	quality level is 7.

2005-09-24  Peter Wu  <peterw@softintegration.com>

	* Incorporate changes necessary so that GraphicsMagick can work
	with the Ch C/C++ interpreter from SoftIntegration at
	http://www.softintegration.com/.

2005-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Incorporate all functionality from
	cache.c, cache_view.c, and stream.c so that all private interfaces
	can be fully hidden.  As a result cache.c, cache_view.c, and
	stream.c are now removed.

2005-09-18  Michal Kowalczuk  <sammael@brzydal.eu.org>

	* coders/gif.c: Free global_colormap before returning with error.

2005-09-18  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (BUILT_SOURCES): Removed.
	* magick/Makefile.am (MAGICK_BUILT_SRCS): Removed, too.

2005-09-12 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* magick/profile.c (ProfileImage):  Free color_profile->name
	and iptc_profile->name when destroying the profile.

2005-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/api.h: Eliminate requirement to include certain system
	headers prior to including <magick/api.h>.
	* utilities/gm.c: Move utility implementation to GMCommand() in
	command.c

2005-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: Added support for reading and writing DPX Luma
	files using proper video levels.
	* magick/colorspace.h (enum ColorspaceType): Decided that
	GRAYColorspace should be reserved for full-range grayscale data
	while Rec601LumaColorspace and Rec709LumaColorspace should be for