@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2005-10-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/dpx.c (AttributeToString): Use strncpy rather than
+        strlcpy to copy string.  This is important since DPX header
+        strings are not null terminated and may need to fill all available
+        space.  Certain short header fields like mp.film.manufacturer.id,
+        mp.film.type, and mp.perfs.offset were being truncated!
+
+</UL>
+<p>
 2005-09-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
